// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ExchangeCard > should render 1`] = `
<div>
  <div
    data-testid="ExchangeCard--changenow"
  >
    <div>
      <button
        class="relative p-5 w-full h-full text-left rounded-lg border-2 duration-200 cursor-pointer border-theme-primary-100 bg-theme-background transition-colors-shadow outline-hidden dark:border-theme-secondary-800 focus-visible:border-theme-primary-400 focus-visible:outline-hidden"
        data-testid="Card"
        tabindex="-1"
        type="button"
      >
        <div
          class="flex flex-col gap-3 items-center md:flex-row"
        >
          <div
            class="overflow-hidden w-11 h-11 rounded-lg shrink-0"
          >
            <img
              alt="ChangeNOW Logo"
              class="object-cover w-full h-full"
              src="https://exchanges.arkvault.io/images/changenow/thumbnail.png"
            />
          </div>
          <div
            class="flex flex-col truncate"
          >
            <div
              class="text-sm font-semibold md:text-lg truncate link"
            >
              ChangeNOW
            </div>
          </div>
        </div>
        <div
          class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`ExchangeCard > should render when the exchange is not active 1`] = `
<div>
  <div
    data-testid="ExchangeCard--changenow"
  >
    <div>
      <button
        class="relative p-5 w-full h-full text-left rounded-lg border-2 duration-200 cursor-pointer border-theme-primary-100 bg-theme-background transition-colors-shadow outline-hidden dark:border-theme-secondary-800 focus-visible:border-theme-primary-400 focus-visible:outline-hidden"
        data-testid="Card"
        tabindex="-1"
        type="button"
      >
        <div
          class="flex flex-col gap-3 items-center md:flex-row"
        >
          <div
            class="overflow-hidden w-11 h-11 rounded-lg shrink-0"
          >
            <img
              alt="ChangeNOW Logo"
              class="object-cover w-full h-full"
              src="https://exchanges.arkvault.io/images/changenow/thumbnail.png"
            />
          </div>
          <div
            class="flex flex-col truncate"
          >
            <div
              class="text-sm font-semibold md:text-lg truncate text-theme-primary-100 dark:text-theme-secondary-800"
            >
              ChangeNOW
            </div>
          </div>
        </div>
        <div
          class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
        />
      </button>
    </div>
  </div>
</div>
`;
